--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo Vue.js</title>
+    <title>Vue-Todo</title>
     <link rel="stylesheet" href="/css/app.css">
     <link rel="shortcut icon" type="image/png" href="/img/to-do-list.png"/>
 </head>
