--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Todo tasks">
+    <meta name="keywords" content="to do, vue, tasks, tucumano">
+    <meta name="author" content="N. Martin Abregú">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue-Todo</title>
     <link rel="stylesheet" href="/css/app.css">
@@ -12,6 +15,10 @@
     <div id="app">
         <tasks></tasks>            
     </div>
+
+    <footer>
+        <p>Created by <a href="https://github.com/mabregu">N. Martin Abregu</a> © 2021</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="/js/app.js"></script>
