--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="to do, vue, tasks, tucumano">
     <meta name="author" content="N. Martin Abregú">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue-Todo</title>
+    <title>TODO App</title>
     <link rel="stylesheet" href="/css/app.css">
     <link rel="shortcut icon" type="image/png" href="/img/to-do-list.png"/>
 </head>
@@ -16,6 +16,10 @@
         <tasks></tasks>            
     </div>
 
+    <button type="button" 
+        onclick="window.location.replace('https://cafecito.app/todo');"
+        style="background-color: #008CBA;color: #FAFAFA; border-radius: 5px; width: 5rem; height: 2rem;"
+    >Cafecitooo</button>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="/js/app.js"></script>
 </body>
